--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
 <resources>
     <string name="app_name">MySuperHero</string>
+
+    <string name="locationTVText">Select your location:</string>
+    <string name="superHeroTVText">Super heroes in the area:</string>
+    <string-array name="locationArea">
+        <item>North</item>
+        <item>South</item>
+        <item>East</item>
+        <item>West</item>
+    </string-array>
 </resources>
